Added foo to the bar

--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -11,19 +11,14 @@
   style="right: 0; left: auto; height: 40vw; width: 40vw; z-index: -1"
 />
 <div
-  style="
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  "
+  class="d-flex justify-content-center align-items-center container m-auto mt-lg-5 mt-md-3 mt-sm-1 h-75"
 >
   <form
     method="post"
-    class="border border-primary rounded"
+    class="w-75 border border-primary rounded"
     style="
       border-width: 0.25vw !important;
-      background-color: rgb(225, 225, 225);
+      background-color: rgb(240, 24ß, 240);
       padding: 2vw 5vw;
     "
   >
