--- a/flask/website/templates/sign_up.html
+++ b/flask/website/templates/sign_up.html
@@ -1,5 +1,28 @@
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
 content %}
+
+<img
+  src="static\images\web\login_background_top.jpeg"
+  class="position-absolute"
+  style="height: 40vw; width: 40vw; z-index: -1"
+/>
+<img
+  src="static\images\web\login_background_bottom.jpeg"
+  class="position-absolute fixed-bottom fixed-right"
+  style="right: 0; left: auto; height: 40vw; width: 40vw; z-index: -1"
+/>
+<div
+  class="d-flex justify-content-center align-items-center container m-auto mt-lg-5 mt-md-3 mt-sm-1 h-75"
+>
+  <form
+    method="post"
+    class="w-75 border border-primary rounded"
+    style="
+      border-width: 0.25vw !important;
+      background-color: rgb(240, 240, 240);
+      padding: 2vw 5vw;
+    "
+  >
 <div class="justify-content-center container m-auto mt-lg-5 mt-md-3 mt-sm-1">
   <form method="POST">
     <h3 class="text-center">Account Erstellen</h3>
