change background color

--- a/flask/website/static/styles/login.css
+++ b/flask/website/static/styles/login.css
@@ -31,7 +31,7 @@
   margin: 2vh 0;
   padding: 1vh 1vw;
   border-radius: 2vw;
-  background: white;
+  background: rgb(232, 240, 254);
 }
 
 .img_input_icon {
