--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -15,6 +15,10 @@
       crossorigin="anonymous"
     />
     <title>{% block title %} {% endblock %}</title>
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='styles/default.css')}}"
+    />
     {% block head %} {% endblock %}
   </head>
   <body>
