added some style

--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -4,7 +4,9 @@
   href="{{url_for('static', filename='styles/home.css')}}"
 />
 <img
+  id="background_image"
   src="{{url_for('static', filename='images/design/home_background.png')}}"
   alt="Hintergrundbild"
 />
+<script src="{{url_for('static', filename='scripts/home.js')}}"></script>
 {% endblock %} {% block content %} {% endblock %}
