--- a/flask/website/static/styles/login.css
+++ b/flask/website/static/styles/login.css
@@ -1,6 +1,12 @@
+body {
+  overflow: hidden;
+}
+
 #background_image {
-  width: 100vw;
-  height: 100vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #super_div {
