improved home background image

--- a/flask/website/static/styles/home.css
+++ b/flask/website/static/styles/home.css
@@ -1,6 +1,8 @@
+body {
+  overflow: hidden;
+}
+
 #background_image {
-  width: 100vw;
-  height: 100vh;
   position: absolute;
   top: 50%;
   left: 50%;
