--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -20,7 +20,7 @@
       />
       <img
         class="img_input_line"
-        src="{{url_for('static', filename='images/design/login_background.png')}}"
+        src="{{url_for('static', filename='images/design/line.png')}}"
         alt="Hintergrund"
       />
       <input type="email" name="email" placeholder="Email" />
@@ -33,7 +33,7 @@
       />
       <img
         class="img_input_line"
-        src="{{url_for('static', filename='images/design/login_background.png')}}"
+        src="{{url_for('static', filename='images/design/line.png')}}"
         alt="Hintergrund"
       />
       <input type="password" name="password" placeholder="Email" />
