--- a/flask/website/static/styles/base.css
+++ b/flask/website/static/styles/base.css
@@ -1,22 +1,29 @@
-body {
+.body {
   overflow: hidden;
 }
 
-#background_image {
+.background_img {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-#super_div {
+.super_div {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-#search_div {
-  display: flex;
-  flex-direction: column;
+.h {
+  text-align: center;
+}
+
+.icon {
+  width: 3vw;
+  height: 3vw;
+}
+
+.input_div {
 }
