--- a/flask/website/static/styles/home.css
+++ b/flask/website/static/styles/home.css
@@ -2,21 +2,22 @@ body {
   overflow: hidden;
 }
 
-#background_image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.h {
+  margin-bottom: 20vh;
+  font-size: 10vh;
+  color: white;
 }
 
-#super_div {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.input_div {
+  width: min-content;
+  padding: 0;
+  margin: 0;
+  font-size: 5vh;
 }
 
-#search_div {
-  display: flex;
-  flex-direction: column;
+.submit {
+  background-color: black;
+  color: white;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
