--- a/flask/website/static/styles/login.css
+++ b/flask/website/static/styles/login.css
@@ -2,82 +2,26 @@ body {
   overflow: hidden;
 }
 
-#background_image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#super_div {
-  position: absolute;
+.super_div {
   background: #f2f2f2;
-  border-radius: 3vh;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
-#super_div form {
-  display: flex;
-  flex-direction: column;
+.super_div form {
   margin: 7.5vh 5vw;
 }
 
-#super_div h1 {
-  text-align: center;
+.h {
   margin-top: 5vh;
   font-size: 5vh;
-  font-weight: bold;
-  color: #3d3d3e;
 }
 
-.div_input {
-  display: flex;
+.input_div {
   margin: 2vh 0;
-  padding: 1vh 1vw;
-  border-radius: 2vw;
-  background: rgb(232, 240, 254);
 }
 
-.img_input_icon {
-  width: 3vw;
-  height: 3vw;
-}
-
-.img_input_line {
-  height: 3vw;
-}
-
-.div_input p {
-  font-size: 2vw;
-}
-
-.div_input input[type="email"],
-.div_input input[type="password"] {
-  padding: 0.5vw;
-  border: none;
-  border-top-right-radius: 1vw;
-  border-bottom-right-radius: 1vw;
-  background: white !important;
-}
-
-.div_input input[type="email"]:focus,
-.div_input input[type="password"]:focus {
-  outline: none;
-}
-
-#super_div a {
-  color: black;
-  text-align: center;
-}
-
-#super_div input[type="submit"] {
+.submit {
   margin-top: 5vh;
   background: #fff200;
-  border: none;
   color: #f2f2f2;
-  border-radius: 1vw;
   font-size: 4vw;
-  font-weight: bold;
 }
