--- a/flask/website/static/styles/base.css
+++ b/flask/website/static/styles/base.css
@@ -27,6 +27,12 @@
   color: #3d3d3e;
 }
 
+.h2 {
+  text-align: center;
+  font-weight: bold;
+  color: #3d3d3e;
+}
+
 .icon {
   width: 3vw;
   height: 3vw;
