--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -40,6 +40,7 @@
       });
     </script>
     <script src="{{url_for('static', filename='scripts/base.js')}}"></script>
+    <script src="{{url_for('static', filename='scripts/classes.js')}}"></script>
     {% block content %} {% endblock %}
   </body>
 </html>
