--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -32,5 +32,6 @@
     </div>
   </form>
 </div>
+<div class="job_super_div"></div>
 <script src="{{url_for('static', filename='scripts/home.js')}}"></script>
 {% endblock %}
