--- a/flask/website/static/styles/home.css
+++ b/flask/website/static/styles/home.css
@@ -2,6 +2,11 @@ body {
   overflow-x: hidden;
 }
 
+.second_bg_img {
+  top: 100vh;
+  transform: translateX(-50%);
+}
+
 .h {
   margin-bottom: 20vh;
   font-size: 10vh;
@@ -11,6 +16,7 @@ body {
 .input_div {
   width: min-content;
   padding: 0;
+  padding-left: 1vw;
   margin: 0;
   font-size: 5vh;
 }
@@ -20,11 +26,14 @@ body {
   color: white;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  font-size: 5vh;
+  padding: 0 1vw;
 }
 
 .job_super_div {
   position: absolute;
   top: 100vh;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -33,11 +42,12 @@ body {
 .job_div {
   display: flex;
   flex-direction: column;
-  margin: 10vw;
-  border: 0.2vw solid black;
+  margin: 5vw;
+  border: 0.2vw solid rgb(78, 78, 78);
   border-radius: 1.5vw;
   padding: 1vw;
   background-color: #cccccc;
+  width: 30vw;
 }
 
 .h2 {
@@ -46,6 +56,16 @@ body {
 
 .table {
   width: 100%;
+}
+
+.td_tags {
+  height: 15vh;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.td_tags p {
+  margin: 0.25vw;
 }
 
 td {
