--- a/flask/website/static/styles/base.css
+++ b/flask/website/static/styles/base.css
@@ -66,7 +66,65 @@
   font-weight: bold;
 }
 
+.job_super_div {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.job_div {
+  display: flex;
+  flex-direction: column;
+  border: 0.2vw solid rgb(78, 78, 78);
+  border-radius: 1.5vw;
+  padding: 1vw;
+  background-color: #cccccc;
+  width: 30vw;
+}
+
 .a {
   color: black;
   text-align: center;
+}
+
+.table {
+  width: 100%;
+}
+
+.td {
+  padding: 1vw;
+}
+
+.account_div {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  right: 3vw;
+  top: 3vw;
+}
+
+.account_img {
+  height: 3vw;
+  width: 3vw;
+  border-radius: 50%;
+  border: #3d3d3e solid 0.1vw;
+}
+
+.account_sub_div {
+  visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5vw 0.5vw;
+  border-radius: 0.25vw;
+  background-color: #cccccc;
+}
+
+.account_submit {
+  width: 100%;
+  background-color: #cccccc;
+  border: none;
+  margin: 0.5vw 0;
 }
