--- a/flask/website/static/styles/job.css
+++ b/flask/website/static/styles/job.css
@@ -1,3 +1,10 @@
 body {
   overflow: hidden;
 }
+
+.submit {
+  background: #fff200;
+  color: #f2f2f2;
+  font-size: 2vw;
+  padding: 0.5vh 1vw;
+}
