--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block head %}
+{% extends "base.html" %} {% block title %}Home{% endblock %} {% block head %}
 <link
   rel="stylesheet"
   href="{{url_for('static', filename='styles/home.css')}}"
@@ -34,7 +34,7 @@
 </div>
 <img
   class="background_img second_bg_img"
-  src="{{url_for('static', filename='images/design/login_background.png')}}"
+  src="{{url_for('static', filename='images/design/home_background_2.png')}}"
   alt="Hintergrund"
 />
 <div
