--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -55,6 +55,13 @@
         <form action="" method="get">
           <input type="submit" value="Ausloggen" class="account_submit" />
         </form>
+        <form action="{{url_for('views.create_job.create_job')}}" method="get">
+          <input
+            type="submit"
+            value="Angebot erstellen"
+            class="account_submit"
+          />
+        </form>
       </div>
     </div>
     {% endif %}
