--- a/flask/website/templates/chat.html
+++ b/flask/website/templates/chat.html
@@ -1,92 +1,25 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
-<div class="container-fluid justify-content-center mt-4">
-  <h3 class="text-center">
-    {{ chat_partner.first_name }} {{ chat_partner.last_name }}
-  </h3>
-  <div>
-    <div class="h-100 w-100 border">
-      <div id="msgs_box" class="d-flex-column">
-        <script>
-          // prettier-ignore
-          let msgs_send = {{ msgs_send|tojson }};
-          let msgs_receive = {{ msgs_receive|tojson }};
-        </script>
-        <script>
-          let msgs_box = document.getElementById("msgs_box");
-          while (true) {
-            if (msgs_send.length == 0) {
-              msgs_receive.forEach((msg) => {
-                create_msg(msg.content, msgs_box, false);
-              });
-              break;
-            } else if (msgs_receive.length == 0) {
-              msgs_send.forEach((msg) => {
-                create_msg(msg.content, msgs_box, true);
-              });
-              break;
-            }
-            if (msgs_send[0].time < msgs_receive[0].time) {
-              create_msg(msgs_send.shift().content, msgs_box, true);
-            } else {
-              create_msg(msgs_receive.shift().content, msgs_box, false);
-            }
-          }
-        </script>
-      </div>
-    </div>
-    <div class="align-bottom input-group">
-      <input
-        id="input_msg"
-        type="text"
-        name="message"
-        class="form-control"
-        placeholder="Nachricht..."
-      />
-      <div class="input-group-append">
-        <button
-          id="send_msg_submit"
-          type="submit"
-          class="btn btn-primary btn-outline-secondary"
-          chat_partner_id="{{ chat_partner.id }}"
-        >
-          ✉
-        </button>
-        <script>
-          // send msg
-          let send_msg = function () {
-            let input = document.getElementById("input_msg");
-            if (input.value.length < 0) {
-              alert("Nachricht muss mindestens ein Zeichen beinhalten!");
-            } else if (input.value.lenght > 2048) {
-              alert("Nachricht darf maximal 2048 Zeichen groß sein!");
-            } else {
-              socket.emit(
-                "msg_send",
-                input.value,
-                document
-                  .getElementById("send_msg_submit")
-                  .getAttribute("chat_partner_id")
-              );
-              create_msg(input.value, msgs_box, true);
-              input.value = "";
-            }
-          };
-          document
-            .getElementById("send_msg_submit")
-            .addEventListener("click", send_msg);
-          document
-            .getElementById("input_msg")
-            .addEventListener("keypress", function (e) {
-              if (13 == e.keyCode) send_msg();
-            });
-          // receive msg
-          socket.on("receive_msg", function (msg) {
-            create_msg(msg.content, msgs_box, false);
-          });
-        </script>
-      </div>
-    </div>
+{% extends "base.html" %} {% block title %}Chat{% endblock %} {% block head %}
+<link
+  rel="stylesheet"
+  href="{{url_for('static', filename='styles/chat.css')}}"
+/>{% endblock %} {% block content %}
+<img
+  class="background_img"
+  src="{{url_for('static', filename='images/design/background.png')}}"
+  alt="Hintergrundbild"
+/>
+<div class="super_div">
+  <h1 class="h">{{chat_partner.first_name}} {{chat_partner.last_name}}</h1>
+  <div
+    class="chat_div"
+    msgs_send="{{msgs_send}}"
+    msgs_received="{{msgs_receive}}"
+    chat_partner="{{chat_partner.id}}"
+  ></div>
+  <div class="input_div">
+    <input type="text" name="msg" class="input" />
+    <input type="button" value="Senden" class="submit" />
   </div>
 </div>
+<script src="{{url_for('static', filename='scripts/chat.js')}}"></script>
 {% endblock %}
