--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -64,6 +64,13 @@
         </form>
       </div>
     </div>
+    <div class="account_div arrow_back">
+      <img
+        class="account_img arrow_back_img"
+        src="{{url_for('static', filename='images/design/arrow_back.png')}}"
+        alt="Profilbild"
+      />
+    </div>
     {% endif %}
   </body>
 </html>
