--- a/flask/website/templates/chat.html
+++ b/flask/website/templates/chat.html
@@ -17,7 +17,7 @@
     chat_partner="{{chat_partner.id}}"
   ></div>
   <div class="input_div">
-    <input type="text" name="msg" class="input" />
+    <input type="text" name="msg" class="input" placeholder="Schreiben..." />
     <input type="button" value="Senden" class="submit" />
   </div>
 </div>
