--- a/flask/website/templates/home.html
+++ b/flask/website/templates/home.html
@@ -41,6 +41,8 @@
   class="job_super_div"
   job_img="{{url_for('views.base.job_image')}}"
   job_url="{{url_for('views.job.job')}}"
+  jobs="{{jobs}}
+  "
 ></div>
 <script src="{{url_for('static', filename='scripts/home.js')}}"></script>
 {% endblock %}
