--- a/flask/website/templates/job.html
+++ b/flask/website/templates/job.html
@@ -17,22 +17,22 @@
         <img
           src="{{url_for('views.base.job_image', id=job.id)}}"
           class="input_icon"
-          alt="Profilbild"
+          alt="Jobbild"
         />
         {{employer}}
       </td>
     </tr>
     <tr>
       <td class="td">Dauer</td>
-      <td class="td">{{job.duration}}</td>
+      <td class="td duration">{{job.duration}}</td>
     </tr>
     <tr>
       <td class="td">Bezahlung</td>
-      <td class="td">{{job.payment}}</td>
+      <td class="td payment">{{job.payment}}</td>
     </tr>
     <tr>
       <td class="td">Start Zeit</td>
-      <td class="td">{{job.time_start}}</td>
+      <td class="td time_start">{{job.time_start}}</td>
     </tr>
   </table>
   <form method="get" action="{{url_for('views.chat.chat')}}">
