--- a/flask/website/templates/base.html
+++ b/flask/website/templates/base.html
@@ -49,9 +49,9 @@
         alt="Profilbild"
       />
       <div class="account_sub_div">
-        <form action="" method="get">
+        <!-- <form action="" method="get">
           <input type="submit" value="Einstellungen" class="account_submit" />
-        </form>
+        </form> -->
         <!-- TODO: Reworke-->
         <div
           id="form_profile"
