--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -39,7 +39,7 @@
       <input
         type="password"
         name="password"
-        placeholder="Email"
+        placeholder="Passwort"
         class="input"
       />
     </div>
