--- a/flask/website/static/styles/base.css
+++ b/flask/website/static/styles/base.css
@@ -1,5 +1,5 @@
 .background_img {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -110,7 +110,7 @@
 }
 
 .account_div {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
