--- a/flask/website/templates/login.html
+++ b/flask/website/templates/login.html
@@ -44,7 +44,7 @@
       />
     </div>
     <a href="" class="a">Passwort vergessen</a>
-    <a href="{{url_for('auth.sign_up')}}" class="a">Noch nicht registiret?</a>
+    <a href="{{url_for('auth.sign_up')}}" class="a">Noch nicht registriert?</a>
     <input type="submit" value="LOGIN" class="submit" />
   </form>
 </div>
