--- a/flask/website/templates/chat.html
+++ b/flask/website/templates/chat.html
@@ -23,3 +23,4 @@
 </div>
 <script src="{{url_for('static', filename='scripts/chat.js')}}"></script>
 {% endblock %}
+<!-- make scroll by new message-->
